--- a/notebooks/c7m2nb1_data_wrangling_auto.ipynb
+++ b/notebooks/c7m2nb1_data_wrangling_auto.ipynb
@@ -1363,7 +1363,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "b7b7a8b5-2951-4f85-acbf-6ddfd7f50aef",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3393,7 +3395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
