--- a/notebooks/c9m2nb3_logistic_regression.ipynb
+++ b/notebooks/c9m2nb3_logistic_regression.ipynb
@@ -25,10 +25,7 @@
     "from sklearn.metrics import log_loss\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "%matplotlib inline \n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "%matplotlib inline "
    ]
   },
   {
@@ -388,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1aa9e522-100f-4eda-9998-ae04dad6829c",
    "metadata": {},
    "outputs": [
@@ -402,7 +399,7 @@
        "       [  7.,  35.,  14.,  80.,   2.,  15.,   0.]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "dccc47ed-62e2-4f60-9047-e73b3382e41f",
    "metadata": {},
    "outputs": [
@@ -424,7 +421,7 @@
        "array([1, 1, 0, 0, 0])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "896983de-db5a-4bca-999d-4ebd0bddfd66",
    "metadata": {},
    "outputs": [
@@ -463,7 +460,7 @@
        "         0.53441472, -0.85972695]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "4f521d79-d4e8-4ffd-ab67-3a46cc4d0a04",
    "metadata": {},
    "outputs": [],
@@ -495,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "3961a0f5-5c2f-4f11-a2b0-ea46f9047966",
    "metadata": {},
    "outputs": [
@@ -923,7 +920,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "e200003f-08bb-4bf4-8b7d-d074f58ba9ed",
    "metadata": {},
    "outputs": [
@@ -947,7 +944,7 @@
        "array([0, 0, 0, 0, 0, 0, 0, 0, 1, 0])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "b8326e2b-1f28-46fb-ac44-d9ffc153dfe6",
    "metadata": {},
    "outputs": [
@@ -986,7 +983,7 @@
        "       [0.94900731, 0.05099269]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "64192a54-c1dd-42c7-9749-db85f825e134",
    "metadata": {},
    "outputs": [
@@ -1017,7 +1014,7 @@
        "       -0.23290551,  0.75198953])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "4d97804b-71b6-46a0-8ad8-0e9956bacf0e",
    "metadata": {},
    "outputs": [
@@ -1038,7 +1035,7 @@
        "Index(['tenure', 'age', 'address', 'income', 'ed', 'employ', 'equip', 'churn'], dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "5b5730fc-7985-4883-b906-934164fdca41",
    "metadata": {},
    "outputs": [
@@ -1092,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "2943bff7-3019-4f73-b765-ca5829e13e81",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1099,7 @@
        "0.6257718410257236"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
